welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:22: error: not found: value etCouleurSol
  return etCouleurSol==Color.green
         ^